Fine-grained and coarse-grained instead of grain (Cynthia)

--- a/paper/sections/bounds.tex
+++ b/paper/sections/bounds.tex
@@ -310,7 +310,7 @@ execution progress that we display to the user.
 \end{arxiv}
 
 \begin{arxiv}
-\begin{theorem}[Fine-grain upper bound on remaining prefix evaluations]%~~~
+\begin{theorem}[Fine-grained upper bound on remaining prefix evaluations]%~~~
 \end{arxiv}
 \begin{kdd}
 \begin{theorem}[Upper bound on the number of remaining prefix evaluations]
@@ -454,7 +454,7 @@ the lengths of prefixes in the remaining search space.
 %
 However, Proposition~\ref{prop:remaining-eval-coarse}
 is weaker than Theorem~\ref{thm:remaining-eval-fine} because
-it leverages only coarse-grain information from the queue.
+it leverages only coarse-grained information from the queue.
 %
 Specifically, Theorem~\ref{thm:remaining-eval-fine} is
 strictly tighter because it additionally incorporates
@@ -462,7 +462,7 @@ prefix-specific objective lower bound information from
 prefixes in the queue, which further constrains
 the lengths of prefixes in the remaining search space.
 
-\begin{proposition}[Coarse-grain upper bound on remaining prefix evaluations] \hfill
+\begin{proposition}[Coarse-grained upper bound on remaining prefix evaluations] \hfill
 \label{prop:remaining-eval-coarse}
 Consider a state space of all rule lists formed from a set of~$M$ antecedents,
 and consider Algorithm~\ref{alg:branch-and-bound} at a particular instant
