Do not instead of don't

--- a/paper/sections/bounds.tex
+++ b/paper/sections/bounds.tex
@@ -1230,7 +1230,7 @@ for the second scenario, first define
     p_k \notin \Phi, \forall p_k \in \Prefix''\} \subset \StartsWith(\Prefix)
 \end{align}
 to be the set of all rule lists whose prefixes start with~$\Prefix$
-and don't contain any antecedents in~$\Phi$.
+and do not contain any antecedents in~$\Phi$.
 %
 Now, recognize that the optimal prefixes in~$\tau(\Prefix, \Phi)$
 and~$\StartsWith(\Prefix)$ are the same, \ie
