Tweak size of Fig 3 to be slightly larger

--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -156,8 +156,8 @@ folds; the others contain the same rules, up to a permutation.
 \begin{center}
 %\includegraphics[width=0.75\textwidth]{figs/sketch-comparison.png}
 % left lower right upper
-\includegraphics[trim={10mm, 10mm, 25mm, 5mm},
-width=0.95\textwidth]{figs/compare-compas-weapon.pdf}
+\includegraphics[trim={14mm, 5mm, 30mm, 5mm},
+width=\textwidth]{figs/compare-compas-weapon.pdf}
 \end{center}
 \caption{Comparison of CORELS and a panel of eight other algorithms:
 logistic regression~(GLM), support vector machines~(SVM),
