--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -290,23 +290,39 @@ Figure~\ref{fig:queue} presents a view of the same experiments.
 %\includegraphics[width=0.75\textwidth]{figs/sketch-ablation.png}
 \begin{table}[t!]
 \centering
-\begin{tabular}{l | c | c | c | c | c}
-Algorithm variant & $t_\text{total}$ (min) & $t_\text{opt}$ (s) & $i_\text{total}$ ($\times 10^6$) & $Q_\text{max}$ ($\times 10^6$) & $K_\text{max}$ \\
+%$Q_\text{max}$ $K_\text{max}$
+\begin{tabular}{l | c | c | c}
+& Total time & Time to & Max evaluated \\
+Algorithm variant & (min) & optimum (s) & prefix length \\
 \hline
-CORELS & 5.5 (1.6) & 8 (2) & 1.7 (0.4) & 1.3 (0.4) & 5-6 \\
-No priority queue (BFS) & 6.7 (2.2) & 4 (1) & 1.9 (0.6) & 1.5 (0.5) & 5-6 \\
-No support bounds & 10.2 (3.4) & 13 (4) & 2.7 (0.8) & 2.2 (0.7) & 5-6 \\
-No symmetry-aware map & 58.6 (23.3) & 23 (6) & 16.0 (5.9) & 14.5 (5.7) & 5-6 \\
-No lookahead bound & 71.9 (23.0) & 9 (2) & 18.5 (5.9) & 16.3 (5.3) & 6-7 \\
+CORELS & 5.5 (1.6) & 8 (2) & 5-6 \\
+No priority queue (BFS) & 6.7 (2.2) & 4 (1) & 5-6 \\
+No support bounds & 10.2 (3.4) & 13 (4) & 5-6 \\
+No symmetry-aware map & 58.6 (23.3) & 23 (6) & 5-6 \\
+No lookahead bound & 71.9 (23.0) & 9 (2) & 6-7 \\
 %equiv. pts. bound & 188.6 (104.6) & 6178 (1840) & 803.8 (0.1) & 790.5 (0.4) & 10-10
-No equivalent pts bound & $>$134 & $>$7168* & $>$800 & $>$789 & $\ge$10
+No equivalent pts bound & $>$134 & $>$7168* & $\ge$10 \\
+\hline
+\hline
+ & Total evaluated & Total queue &  Max queue \\
+Algorithm variant & prefixes ($\times 10^6$) & insertions ($\times 10^6$) & size ($\times 10^6$) \\
+\hline
+CORELS & & 1.7 (0.4) & 1.3 (0.4) \\
+No priority queue (BFS) & & 1.9 (0.6) & 1.5 (0.5) \\
+No support bounds  & & 2.7 (0.8) & 2.2 (0.7) \\
+No symmetry-aware map & & 16.0 (5.9) & 14.5 (5.7) \\
+No lookahead bound & & 18.5 (5.9) & 16.3 (5.3) \\
+%equiv. pts. bound & 188.6 (104.6) & 6178 (1840) & 803.8 (0.1) & 790.5 (0.4) & 10-10
+No equivalent pts bound & & $>$800 & $>$789
 \end{tabular}
 %\vspace{4mm}
 \caption{Per-component performance improvement.
 %
 The columns report total execution time,
-time to optimum, number of queue insertions,
-maximum queue size, and maximum evaluated prefix length.
+time to optimum,  maximum evaluated prefix length,
+total number of evaluated prefixes,
+total number of queue insertions,
+and maximum queue size.
 %
 The first row shows CORELS; subsequent rows show variants
 that each remove a specific implementation optimization or bound.
@@ -327,7 +343,7 @@ in the final row, we report the minimum values across folds. \\
 \vspace{4mm}
 \label{tab:ablation}
 \end{table}
-%
+
 \begin{figure}[t!]
 \begin{center}
 % left lower right upper
