Cynthia's conclusion paragraph about CORELS limitations

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -425,6 +425,14 @@ booktitle={Proceedings of Artificial Intelligence and Statistics ({AISTATS})},
 year={2015}
 }
 
+@article{WangRu16,
+title={Causal Falling Rule Lists},
+__author={Fulton Wang and Cynthia Rudin},
+author={F. Wang and C. Rudin},
+    journal={Preprint at arXiv:1510.05189},
+    year={2015}
+}
+
 @inproceedings{GohRu14,
 __author={Siong Thye Goh and Cynthia Rudin},
 author={S. T. Goh and C. Rudin},
