I think a_k is an antecedent, not prefix, so say so and use p_k
Note that Yang et al uses a_k for antecedents

--- a/paper/sections/conclusion.tex
+++ b/paper/sections/conclusion.tex
@@ -34,7 +34,7 @@ which forces the estimated probabilities to decrease along the list.
 %
 While CORELS does not technically produce estimates of ${\P(Y=1 \given X)}$,
 one could form such an estimate by computing the empirical
-proportion ${\hat{\P}(Y=1 \given X \textrm{ obeys } a_k)}$ for each prefix~$a_k$.
+proportion ${\hat{\P}(Y=1 \given X \textrm{ obeys } p_k)}$ for each antecedent~$p_k$.
 %
 Furthermore, it is not designed to assist with causal inference applications, since
 it does not estimate the effect of a treatment via the conditional difference
