Add a bunch of rule lists to appendix for weapon prediction
Corresponds to sparsity figure

--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -107,7 +107,7 @@ end with the same default rule, and contain the same prefix rules, up to a permu
 the prefix rules always predict the positive class label,
 and the default rule always predicts the negative class label.
 %
-Note that our objective does is not designed to enforce any of these properties,
+Note that our objective is not designed to enforce any of these properties,
 though some may be seen as desirable.
 }
 \label{fig:recidivism-all-folds}
@@ -173,6 +173,7 @@ strategy presented by~\citet{Goel16} that combines three stop criteria
 and is based on a reduced version of their full regression model.
 
 \subsection{Comparison of accuracy and model size for CORELS and other algorithms}
+\label{sec:sparsity}
 
 Figure~\ref{fig:comparison} shows that there were no statistically significant
 differences in algorithm accuracies.
