--- a/paper/sections/appendix.tex
+++ b/paper/sections/appendix.tex
@@ -268,3 +268,240 @@ smaller class with replacement.
 We generate cross-validation folds first, and then resample within each fold.
 %
 In our 10-fold cross-validation experiments, each training set contains 50,743 datapoints.
+
+\clearpage
+\section*{Appendix D. Mined rules}
+
+\textbf{Weapon prediction problem with 28 rules (\S\ref{sec:sparsity})} \\
+cs\_objcs: stop reason = suspicious object \\
+cs\_descr: stop reason = fits description \\
+cs\_casng: stop reason = casing \\
+cs\_lkout: stop reason = acting as lookout \\
+cs\_cloth: stop reason = suspicious clothing \\
+cs\_drgtr: stop reason = drug transaction \\
+cs\_furtv: stop reason = furtive movements \\
+cs\_vcrim: stop reason = actions of violent crime \\
+cs\_bulge: stop reason = suspicious bulge \\
+ac\_proxm: additional circumstances = proximity to crime scene \\
+ac\_evasv: additional circumstances = evasive response \\
+ac\_assoc: additional circumstances = associating with criminals \\
+ac\_cgdir: additional circumstances = changed direction \\
+ac\_incid: additional circumstances = high crime area \\
+ac\_time: additional circumstances = time of day \\
+ac\_stsnd: additional circumstances = sights and sounds of criminal activity \\
+ac\_rept: additional circumstances = witness report \\
+ac\_inves: additional circumstances = ongoing investigation \\
+city: Queens \\
+city: Manhattan \\
+city: Brooklyn \\
+city: Staten \\
+city: Bronx \\
+location: neither housing nor transit authority \\
+location: housing authority \\
+location: transit authority \\
+inout: outside \\
+inout: inside
+
+\section*{Appendix E. Optimal rule lists for weapon prediction, for different~$\Reg$}
+
+Example optimal rule lists that predict whether a weapon will be found on a
+stopped individual who is frisked or searched, for the NYCLU stop-and-frisk dataset,
+found by CORELS, across 10 cross-validation folds.
+%
+Figures~\ref{fig:weapon-rule-list-04}, \ref{fig:weapon-rule-list-01}, and~\ref{fig:weapon-rule-list-0025}
+use regularization parameters~${\Reg = 0.04}$, 0.01, and 0.0025, respectively,
+and correspond to the experiments in~\S\ref{sec:sparsity} (Figure~\ref{fig:sparsity}, bottom).
+%
+The optimal rule lists tend to grow in length as the regularization parameter decreases.
+
+For each of the larger regularization parameters~${\Reg = 0.04}$~(Figure~\ref{fig:weapon-rule-list-04})
+and 0.01~(Figure~\ref{fig:weapon-rule-list-01}), we observe that across the folds,
+all the optimal rule lists contain the same prefix rules, up to a permutation.
+%
+Furthermore, the prefix rules always predict the positive class label,
+and the default rule always predicts the negative class label.
+%
+We note that our objective is not designed to enforce any of these properties,
+though some may be seen as desirable.
+
+With the smaller regularization parameter~${\Reg = 0.0025}$~(Figure~\ref{fig:weapon-rule-list-0025}),
+we observe a greater diversity of optimal rule lists, though they share similar structure.
+
+%frisk 0.04
+%{cs_bulge:stop-reason=suspicious-bulge}~1;{cs_objcs:stop-reason=suspicious-object}~1;default~0
+%{cs_objcs:stop-reason=suspicious-object}~1;{cs_bulge:stop-reason=suspicious-bulge}~1;default~0
+%{cs_objcs:stop-reason=suspicious-object}~1;{cs_bulge:stop-reason=suspicious-bulge}~1;default~0
+%{cs_objcs:stop-reason=suspicious-object}~1;{cs_bulge:stop-reason=suspicious-bulge}~1;default~0
+%{cs_bulge:stop-reason=suspicious-bulge}~1;{cs_objcs:stop-reason=suspicious-object}~1;default~0
+%{cs_bulge:stop-reason=suspicious-bulge}~1;{cs_objcs:stop-reason=suspicious-object}~1;default~0
+%{cs_objcs:stop-reason=suspicious-object}~1;{cs_bulge:stop-reason=suspicious-bulge}~1;default~0
+%{cs_objcs:stop-reason=suspicious-object}~1;{cs_bulge:stop-reason=suspicious-bulge}~1;default~0
+%{cs_objcs:stop-reason=suspicious-object}~1;{cs_bulge:stop-reason=suspicious-bulge}~1;default~0
+%{cs_objcs:stop-reason=suspicious-object}~1;{cs_bulge:stop-reason=suspicious-bulge}~1;default~0
+\begin{figure}[h!]
+\begin{algorithmic}
+\State \bif $(stop~reason = suspicious~object)$ \bthen $yes$ \Comment{Found by 7 folds}
+\State \belif $(stop~reason = suspicious~bulge)$ \bthen $yes$
+\State \belse $no$
+\end{algorithmic}
+\vspace{1mm}
+\begin{algorithmic}
+\State \bif $(stop~reason = suspicious~bulge)$ \bthen $yes$ \Comment{Found by 3 folds}
+\State \belif $(stop~reason = suspicious~object)$ \bthen $yes$
+\State \belse $no$
+\end{algorithmic}
+\caption{Example optimal rule lists for the NYCLU stop-and-frisk dataset,
+found by CORELS with regularization parameter ($\Reg = 0.04$), across 10 cross-validation folds.
+}
+\label{fig:weapon-rule-list-04}
+\end{figure}
+
+%frisk 0.01
+%{cs_bulge:stop-reason=suspicious-bulge}~1;{location:transit-authority}~1;{cs_objcs:stop-reason=suspicious-object}~1;default~0
+%{cs_objcs:stop-reason=suspicious-object}~1;{location:transit-authority}~1;{cs_bulge:stop-reason=suspicious-bulge}~1;default~0
+%{location:transit-authority}~1;{cs_bulge:stop-reason=suspicious-bulge}~1;{cs_objcs:stop-reason=suspicious-object}~1;default~0
+%{cs_bulge:stop-reason=suspicious-bulge}~1;{location:transit-authority}~1;{cs_objcs:stop-reason=suspicious-object}~1;default~0
+%{location:transit-authority}~1;{cs_objcs:stop-reason=suspicious-object}~1;{cs_bulge:stop-reason=suspicious-bulge}~1;default~0
+%{location:transit-authority}~1;{cs_objcs:stop-reason=suspicious-object}~1;{cs_bulge:stop-reason=suspicious-bulge}~1;default~0
+%{cs_objcs:stop-reason=suspicious-object}~1;{location:transit-authority}~1;{cs_bulge:stop-reason=suspicious-bulge}~1;default~0
+%{cs_objcs:stop-reason=suspicious-object}~1;{location:transit-authority}~1;{cs_bulge:stop-reason=suspicious-bulge}~1;default~0
+%{cs_objcs:stop-reason=suspicious-object}~1;{cs_bulge:stop-reason=suspicious-bulge}~1;{location:transit-authority}~1;default~0
+%{location:transit-authority}~1;{cs_objcs:stop-reason=suspicious-object}~1;{cs_bulge:stop-reason=suspicious-bulge}~1;default~0
+\begin{figure}[h!]
+\begin{algorithmic}
+\State \bif $(location = transit~authority)$ \bthen $yes$ \Comment{Found by 3 folds}
+\State \belif $(stop~reason = suspicious~object)$ \bthen $yes$
+\State \belif $(stop~reason = suspicious~bulge)$ \bthen $yes$
+\State \belse $no$
+\end{algorithmic}
+\vspace{1mm}
+\begin{algorithmic}
+\State \bif $(stop~reason = suspicious~object)$ \bthen $yes$ \Comment{Found by 3 folds}
+\State \belif $(location = transit~authority)$ \bthen $yes$
+\State \belif $(stop~reason = suspicious~bulge)$ \bthen $yes$
+\State \belse $no$
+\end{algorithmic}
+\vspace{1mm}
+\begin{algorithmic}
+\State \bif $(stop~reason = suspicious~bulge)$ \bthen $yes$ \Comment{Found by 2 folds}
+\State \belif $(location = transit~authority)$ \bthen $yes$
+\State \belif $(stop~reason = suspicious~object)$ \bthen $yes$
+\State \belse $no$
+\end{algorithmic}
+\vspace{1mm}
+\begin{algorithmic}
+\State \bif $(location = transit~authority)$ \bthen $yes$ \Comment{Found by 1 fold}
+\State \belif $(stop~reason = suspicious~bulge)$ \bthen $yes$
+\State \belif $(stop~reason = suspicious~object)$ \bthen $yes$
+\State \belse $no$
+\end{algorithmic}
+\vspace{1mm}
+\begin{algorithmic}
+\State \bif $(stop~reason = suspicious~object)$ \bthen $yes$ \Comment{Found by 1 fold}
+\State \belif $(stop~reason = suspicious~bulge)$ \bthen $yes$
+\State \belif $(location = transit~authority)$ \bthen $yes$
+\State \belse $no$
+\end{algorithmic}
+\caption{Example optimal rule lists for the NYCLU stop-and-frisk dataset,
+found by CORELS with regularization parameter ($\Reg = 0.01$), across 10 cross-validation folds.
+}
+\label{fig:weapon-rule-list-01}
+\end{figure}
+
+%frisk 0.025
+%{cs_objcs:stop-reason=suspicious-object}~1;{cs_casng:stop-reason=casing}~0;{cs_bulge:stop-reason=suspicious-bulge}~1;{cs_descr:stop-reason=fits-description}~0;{location:transit-authority}~1;{inout:inside}~0;{city:Manhattan}~1;default~0
+%{cs_objcs:stop-reason=suspicious-object}~1;{cs_bulge:stop-reason=suspicious-bulge}~1;{location:housing-authority}~0;{cs_descr:stop-reason=fits-description}~0;{cs_casng:stop-reason=casing}~0;{city:Manhattan}~1;default~0
+%{cs_drgtr:stop-reason=drug-transaction}~0;{cs_bulge:stop-reason=suspicious-bulge}~1;{cs_objcs:stop-reason=suspicious-object}~1;{location:housing-authority}~0;{cs_descr:stop-reason=fits-description}~0;{cs_casng:stop-reason=casing}~0;{city:Manhattan}~1;{city:Bronx}~1;default~0
+%{cs_objcs:stop-reason=suspicious-object}~1;{cs_casng:stop-reason=casing}~0;{cs_bulge:stop-reason=suspicious-bulge}~1;{cs_descr:stop-reason=fits-description}~0;{location:transit-authority}~1;{inout:inside}~0;{city:Manhattan}~1;default~0
+%{cs_objcs:stop-reason=suspicious-object}~1;{cs_casng:stop-reason=casing}~0;{cs_bulge:stop-reason=suspicious-bulge}~1;{cs_descr:stop-reason=fits-description}~0;{location:transit-authority}~1;{inout:inside}~0;{city:Manhattan}~1;default~0
+%{cs_objcs:stop-reason=suspicious-object}~1;{cs_casng:stop-reason=casing}~0;{cs_bulge:stop-reason=suspicious-bulge}~1;{cs_descr:stop-reason=fits-description}~0;{location:housing-authority}~0;{city:Manhattan}~1;default~0
+%{cs_objcs:stop-reason=suspicious-object}~1;{cs_casng:stop-reason=casing}~0;{cs_bulge:stop-reason=suspicious-bulge}~1;{cs_descr:stop-reason=fits-description}~0;{location:transit-authority}~1;{inout:inside}~0;{city:Manhattan}~1;default~0
+%{cs_objcs:stop-reason=suspicious-object}~1;{cs_casng:stop-reason=casing}~0;{cs_bulge:stop-reason=suspicious-bulge}~1;{cs_descr:stop-reason=fits-description}~0;{location:transit-authority}~1;{inout:inside}~0;{city:Manhattan}~1;{ac_cgdir:circumstances=changed-direction}~0;{city:Bronx}~1;default~0
+%{cs_objcs:stop-reason=suspicious-object}~1;{cs_casng:stop-reason=casing}~0;{cs_bulge:stop-reason=suspicious-bulge}~1;{location:housing-authority}~0;{cs_descr:stop-reason=fits-description}~0;{city:Manhattan}~1;default~0
+%{cs_objcs:stop-reason=suspicious-object}~1;{cs_casng:stop-reason=casing}~0;{cs_bulge:stop-reason=suspicious-bulge}~1;{cs_descr:stop-reason=fits-description}~0;{cs_vcrim:stop-reason=actions-of-violent-crime}~0;{location:transit-authority}~1;{inout:inside}~0;{city:Manhattan}~1;{ac_evasv:circumstances=evasive-response}~0;{city:Bronx}~1;default~0
+\begin{figure}[h!]
+\scriptsize
+\begin{algorithmic}
+\State \bif $(stop~reason = suspicious~object)$ \bthen $yes$ \Comment{Found by 4 folds $(K=7)$}
+\State \belif $(stop~reason = casing)$ \bthen $no$
+\State \belif $(stop~reason = suspicious~bulge)$ \bthen $yes$
+\State \belif $(stop~reason = fits~description)$ \bthen $no$
+\State \belif $(location = transit~authority)$ \bthen $yes$
+\State \belif $(inside~or~outside = inside)$ \bthen $no$
+\State \belif $(city = Manhattan)$ \bthen $yes$
+\State \belse $no$
+\end{algorithmic}
+\vspace{0.5mm}
+\begin{algorithmic}
+\State \bif $(stop~reason = suspicious~object)$ \bthen $yes$ \Comment{Found by 1 fold $(K=6)$}
+\State \belif $(stop~reason = casing)$ \bthen $no$
+\State \belif $(stop~reason = suspicious~bulge)$ \bthen $yes$
+\State \belif $(location = housing~authority)$ \bthen $no$
+\State \belif $(stop~reason = fits~description)$ \bthen $no$
+\State \belif $(city = Manhattan)$ \bthen $yes$
+\State \belse $no$
+\end{algorithmic}
+\vspace{0.5mm}
+\begin{algorithmic}
+\State \bif $(stop~reason = suspicious~object)$ \bthen $yes$ \Comment{Found by 1 fold $(K=6)$}
+\State \belif $(stop~reason = suspicious~bulge)$ \bthen $yes$
+\State \belif $(location = housing~authority)$ \bthen $no$
+\State \belif $(stop~reason = fits~description)$ \bthen $no$
+\State \belif $(stop~reason = casing)$ \bthen $no$
+\State \belif $(city = Manhattan)$ \bthen $yes$
+\State \belse $no$
+\end{algorithmic}
+\vspace{0.5mm}
+\begin{algorithmic}
+\State \bif $(stop~reason = suspicious~object)$ \bthen $yes$ \Comment{Found by 1 fold $(K=6)$}
+\State \belif $(stop~reason = casing)$ \bthen $no$
+\State \belif $(stop~reason = suspicious~bulge)$ \bthen $yes$
+\State \belif $(stop~reason = fits~description)$ \bthen $no$
+\State \belif $(location = housing~authority)$ \bthen $no$
+\State \belif $(city = Manhattan)$ \bthen $yes$
+\State \belse $no$
+\end{algorithmic}
+\vspace{0.5mm}
+\begin{algorithmic}
+\State \bif $(stop~reason = suspicious~object)$ \bthen $yes$ \Comment{Found by 1 fold $(K=9)$}
+\State \belif $(stop~reason = casing)$ \bthen $no$
+\State \belif $(stop~reason = suspicious~bulge)$ \bthen $yes$
+\State \belif $(stop~reason = fits~description)$ \bthen $no$
+\State \belif $(location = transit~authority)$ \bthen $yes$
+\State \belif $(inside~or~outside = inside)$ \bthen $no$
+\State \belif $(city = Manhattan)$ \bthen $yes$
+\State \belif $(additional~circumstances = changed~direction)$ \bthen $no$
+\State \belif $(city = Bronx)$ \bthen $yes$
+\State \belse $no$
+\end{algorithmic}
+\vspace{0.5mm}
+\begin{algorithmic}
+\State \bif $(stop~reason = suspicious~object)$ \bthen $yes$ \Comment{Found by 1 fold $(K=10)$}
+\State \belif $(stop~reason = casing)$ \bthen $no$
+\State \belif $(stop~reason = suspicious~bulge)$ \bthen $yes$
+\State \belif $(stop~reason = fits~description)$ \bthen $no$
+\State \belif $(stop~reason = actions~of~violent~crime)$ \bthen $no$
+\State \belif $(location = transit~authority)$ \bthen $yes$
+\State \belif $(inside~or~outside = inside)$ \bthen $no$
+\State \belif $(city = Manhattan)$ \bthen $yes$
+\State \belif $(additional~circumstances = evasive~response)$ \bthen $no$
+\State \belif $(city = Bronx)$ \bthen $yes$
+\State \belse $no$
+\end{algorithmic}
+\vspace{0.5mm}
+\begin{algorithmic}
+\State \bif $(stop~reason = drug~transaction)$ \bthen $no$ \Comment{Found by 1 fold $(K=8)$}
+\State \belif $(stop~reason = suspicious~bulge)$ \bthen $yes$
+\State \belif $(stop~reason = suspicious~object)$ \bthen $yes$
+\State \belif $(location = housing~authority)$ \bthen $no$
+\State \belif $(stop~reason = fits~description)$ \bthen $no$
+\State \belif $(stop~reason = casing)$ \bthen $no$
+\State \belif $(city = Manhattan)$ \bthen $yes$
+\State \belif $(city = Bronx)$ \bthen $yes$
+\State \belse $no$
+\end{algorithmic}
+\caption{Example optimal rule lists for the NYCLU stop-and-frisk dataset,
+found by CORELS with regularization parameter ($\Reg = 0.0025$), across 10 cross-validation folds.
+}
+\label{fig:weapon-rule-list-0025}
+\end{figure}
