--- a/paper/sections/appendix.tex
+++ b/paper/sections/appendix.tex
@@ -272,7 +272,7 @@ In our 10-fold cross-validation experiments, each training set contains 50,743 d
 \clearpage
 \section*{Appendix D. Mined rules}
 
-\textbf{Weapon prediction problem with 28 rules (\S\ref{sec:sparsity})} \\
+\textbf{Weapon prediction (NYCLU stop-and-frisk dataset) with 28 rules (\S\ref{sec:sparsity})} \\
 cs\_objcs: stop reason = suspicious object \\
 cs\_descr: stop reason = fits description \\
 cs\_casng: stop reason = casing \\
