--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -264,6 +264,7 @@ the remaining search space decays much more slowly without this bound (dashed li
 \end{figure}
 
 \subsection{CORELS execution traces and efficacy of algorithm optimizations}
+\label{sec:traces}
 
 In the remainder, we show results using the ProPublica dataset.
 %
