--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -30,7 +30,7 @@ assessment.
 This dataset contains records for 7,215 individuals.
 %
 Our rule mining framework extracts 14 features and combines them into
-156 rules on average (folds ranged from containing 155 to 157 rules).
+156 antecedents on average (folds ranged from containing 155 to 157 antecedents).
 %
 \item Using the NYCLU 2014 stop-and-frisk dataset~\citep{nyclu:2014} to predict
 whether a weapon will be found on a stopped individual who is frisked or searched.
@@ -42,11 +42,18 @@ was frisked and/or searched.
 Of these, criminal possession of a weapon was identified in only about 5\% of instances.
 %
 Resampling due to class imbalance, for 10-fold cross-validation, yields training sets
-that each contain 50,743 datapoints.~\footnote{For further details about these
-preprocessing steps, see Appendix~C.}
+that each contain 50,743 datapoints.
+%
+From a set of 5 categorical features, we form a set of~28 single-clause antecedents
+that we use in our experiments below, through~\S\ref{sec:sparsity}.
+%
+For our experiments in~\S\ref{sec:traces}, we add negations of 18 of these antecedents,
+which gives a total of 46 antecedents.
 \end{itemize}
 %
-Our choice of and approach to the second problem is inspired by the work
+For further details about data preprocessing steps and antecedent mining, see Appendix~C.
+%
+Our choice of and approach to the weapon prediction problem is inspired by the work
 of~\citet{Goel16}, who develop regression models to analyze racial disparities
 in New York City's stop-and-frisk policy, for a similar, larger dataset.
 %
