--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -298,22 +298,22 @@ Figure~\ref{fig:queue} presents a view of the same experiments.
 %
 %\includegraphics[width=0.75\textwidth]{figs/sketch-ablation.png}
 \begin{table}[t!]
-\centering
-%$Q_\text{max}$ $K_\text{max}$
-\begin{tabular}{l | c | c | c}
-& Total time & Time to & Max evaluated \\
-Algorithm variant & (min) & optimum (s) & prefix length \\
+\begin{tabular}{l | c  r | c | c}
+& Total time & Slow- & Time to & Max evaluated \\
+Algorithm variant & (min) & down & optimum (s) & prefix length \\
 \hline
-CORELS & 5.5 (1.6) & 8 (2) & 5-6 \\
-No priority queue (BFS) & 6.7 (2.2) & 4 (1) & 5-6 \\
-No support bounds & 10.2 (3.4) & 13 (4) & 5-6 \\
-No symmetry-aware map & 58.6 (23.3) & 23 (6) & 5-6 \\
-No lookahead bound & 71.9 (23.0) & 9 (2) & 6-7 \\
+CORELS & 5.5 (1.6) & --- & 8 (2) & 5-6 \\
+No priority queue (BFS) & 6.7 (2.2) & 1.2$\times$ & 4 (1) & 5-6 \\
+No support bounds & 10.2 (3.4) & 1.8$\times$ & 13 (4) & 5-6 \\
+No symmetry-aware map & 58.6 (23.3) & 9.0$\times$ & 23 (6) & 5-6 \\
+No lookahead bound & 71.9 (23.0) & 12$\times$ & 9 (2) & 6-7 \\
 %equiv. pts. bound & 188.6 (104.6) & 6178 (1840) & 803.8 (0.1) & 790.5 (0.4) & 10-10
-No equivalent pts bound & $>$134 & $>$7168* & $\ge$10 \\
+No equivalent pts bound & $>$134 & $>64\times$ & $>$7168* & $\ge$10 \\
 \hline
+\end{tabular}
+\begin{tabular}{l | c | c | c}
 \hline
- & Total evaluated & Total queue &  Max queue \\
+ & Total evaluated & Total queue &  Max queue~~~~ \\
 Algorithm variant & prefixes ($\times 10^6$) & insertions ($\times 10^6$) & size ($\times 10^6$) \\
 \hline
 CORELS & & 1.7 (0.4) & 1.3 (0.4) \\
@@ -327,10 +327,10 @@ No equivalent pts bound & & $>$800 & $>$789
 %\vspace{4mm}
 \caption{Per-component performance improvement.
 %
-The columns report total execution time,
-time to optimum,  maximum evaluated prefix length,
-total number of evaluated prefixes,
-total number of queue insertions,
+The columns report total execution time~(min),
+time to optimum~(s),  maximum evaluated prefix length,
+total number of evaluated prefixes~(millions),
+total number of queue insertions~(millions),
 and maximum queue size.
 %
 The first row shows CORELS; subsequent rows show variants
@@ -345,7 +345,10 @@ after consuming 390-410GB RAM.
 %
 In all but the final row and column, we report means
 (and standard deviations) over 10 cross-validation folds;
-in the final row, we report the minimum values across folds. \\
+in the final row, we report the minimum values across folds.
+%
+We also report the slowdown in mean total execution time,
+with respect to CORELS. \\
 %
 *~Only 4 out of 10 folds achieve the optimum before being terminated.
 }
