Minor edit -- add BFS label to relevant ablation subfigure

--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -391,7 +391,7 @@ For each execution, we indicate the total time in seconds,
 relative to the full CORELS implementation (T = 342 s),
 and with a dashed vertical line.
 %
-Note that the execution of the last variant is incomplete (bottom right).
+Note that the execution without the equivalent points bound (bottom right) is incomplete.
 }
 \label{fig:queue}
 \end{figure}
