--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -360,6 +360,56 @@ in the remaining fields, we report minimum values across folds.
 \label{tab:ablation}
 \end{table}
 
+\begin{table}[t!]
+\begin{tabular}{l | c  r | c | c}
+& Total time & Slow- & Time to & Max evaluated~ \\
+Algorithm variant & (s) & down & optimum ($\mu$s) & prefix length \\
+\hline
+CORELS & 47.43 (3.8) & 1.00$\times$ & 0 (0) & 11-11 \\
+No priority queue (BFS) & 143.71 (13.0) & 3.03$\times$ & 0 (0) & 11-11 \\
+No support bounds & 89.58 (7.6) & 1.89$\times$ & 0 (0) & 11-12 \\
+No symmetry-aware map & 2697.78 (8093.3) & 66.63$\times$ & 0 (0) & 1-11 \\
+No lookahead bound & 75.14 (5.2) & 1.59$\times$ & 0 (0) & 11-12 \\
+No equivalent points bound & 0.00 (0.0) & 0.00$\times$ & 0 (0) & 1-1 \\
+\hline
+\end{tabular}
+\begin{tabular}{l | c | c | c}
+\hline
+ & Lower bound & Total queue &  Max queue \\
+Algorithm variant & evaluations ($\times 10^5$) & insertions ($\times 10^5$) & size ($\times 10^5$) \\
+\hline
+CORELS & 64.58 (4.9) & 1.73 (0.1) & 1.13 (0.1) \\
+No priority queue (BFS) & 200.73 (17.5) & 5.40 (0.5) & 2.00 (0.1) \\
+No support bounds & 121.54 (9.8) & 3.08 (0.3) & 1.91 (0.1) \\
+No symmetry-aware map & 3891.73 (11675.2) & 107.35 (322.0) & 79.87 (239.6) \\
+No lookahead bound & 102.41 (7.3) & 2.78 (0.2) & 1.82 (0.1) \\
+No equivalent points bound & 0.00 (0.0) & 0.00 (0.0) & 0.00 (0.0) \\
+\end{tabular}
+%\vspace{4mm}
+\caption{Per-component performance improvement.
+%
+The columns report the total execution time,
+time to optimum, maximum evaluated prefix length,
+number of times we completely evaluate a prefix~$\Prefix$'s lower bound~$b(\Prefix, \x, \y)$,
+total number of queue insertions (which is equal to the number of cache insertions),
+and maximum logical queue size.
+%
+The first row shows CORELS; subsequent rows show variants
+that each remove a specific implementation optimization or bound.
+%
+(We are not measuring the cumulative effects of removing a sequence of components.)
+%
+All rows represent complete executions.
+%
+We report means (and standard deviations) over 10 cross-validation folds.
+%
+We also report the  mean slowdown in total execution time,
+with respect to CORELS.
+}
+\vspace{4mm}
+\label{tab:ablation-weapon}
+\end{table}
+
 \begin{figure}[t!]
 \begin{center}
 % left lower right upper
@@ -433,7 +483,7 @@ For each execution, we indicate the total time in seconds,
 relative to the full CORELS implementation (T = 40 s),
 and with a dashed vertical line.
 }
-\label{fig:queue}
+\label{fig:queue-weapon}
 \end{figure}
 
 \subsection{Algorithmic Speedup}
